--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -106,6 +106,7 @@
     <string name="error_down">断开连接时出错：%s</string>
     <string name="error_fetching_apps">获取应用列表时出错：%s</string>
     <string name="error_root">请获取 root 权限并重试</string>
+    <string name="error_prepare">准备连接时出错：%s</string>
     <string name="error_up">建立连接时出错：%s</string>
     <string name="exclude_private_ips">排除局域网</string>
     <string name="generate_new_private_key">生成新的私钥</string>
@@ -125,6 +126,8 @@
     <string name="key_length_explanation_base64">：WireGuard 的 Base64 密钥长度必须为 44 个字符（32 字节）</string>
     <string name="key_length_explanation_binary">：WireGuard 密钥大小必须为 32 字节</string>
     <string name="key_length_explanation_hex">：WireGuard 的十六进制密钥长度必须为 64 个字符（32 字节）</string>
+    <string name="latest_handshake">上次握手时间</string>
+    <string name="latest_handshake_ago">%s之前</string>
     <string name="listen_port">监听端口</string>
     <string name="log_export_error">无法导出日志：%s</string>
     <string name="log_export_subject">WireGuard 日志文件</string>
