ui: display latest handshake time
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -140,6 +140,8 @@
     <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
     <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
     <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
+    <string name="latest_handshake">Latest handshake</string>
+    <string name="latest_handshake_ago">%s ago</string>
     <string name="listen_port">Listen port</string>
     <string name="log_export_error">Unable to export log: %s</string>
     <string name="log_export_subject">WireGuard Android Log File</string>
